--- a/website.html
+++ b/website.html
@@ -493,42 +493,59 @@
   <h2>CTMF 3: Prototyping</h2>
 
   <p>
-    Our team’s prototyping process for the <strong>CIV102 Bridge Project</strong> spanned three key stages: a hand-drawn technical sketch, a Blender 3D model, and the final physical construction. This sequence of prototyping methods helped us deeply understand the dimensions, spatial structure, and practical assembly techniques required for a successful bridge. Beginning with the technical drawing (Figure 1), we planned each element of our design including member thicknesses, cross-sectional geometry, and precise spacing for reinforcements and diaphragms. This phase helped align our team on a shared geometric and dimensional understanding.
+    Prototyping was a critical part of our CIV102 bridge design process, and we approached it through three distinct yet complementary stages: conceptual sketching, digital modeling, and full-scale physical construction. Each stage allowed our team to deepen our understanding of the bridge’s geometry, loading behavior, and practical constraints. We began by creating detailed engineering drawings (Figure 1), mapping out key dimensions and component layouts. These drawings helped us understand the relationships between elements such as the top span, underlayers, and diaphragm reinforcements, which later informed both calculations and build strategies.
   </p>
 
   <figure style="text-align: center;">
-    <img src="final_sketch.png" alt="Figure 1 - Technical Drawing of Final Bridge Design" style="max-width: 100%; height: auto;" />
+    <img src="drawing.png" alt="Figure 1 - Engineering Drawing of Final Bridge Design" style="max-width: 100%; height: auto;" />
     <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
-      <strong>Figure 1:</strong> Final hand-drawn sketch outlining exact bridge layout, reinforcements, and member dimensions.
+      <strong>Figure 1:</strong> Engineering drawing prototype used to finalize dimensions and construction strategy.
     </figcaption>
   </figure>
 
   <p>
-    We then moved to a Blender 3D model (Figure 2), which enabled us to visualize the bridge in three dimensions. Unlike the drawing, this model allowed us to assess volume, thickness consistency, and the interrelation between members in a more dynamic environment. During this step, we caught errors in the internal spacing and quickly resolved them before physical cutting began. Blender also helped us simulate the layering of sheets and test spacing for adhesives and reinforcements. This second prototyping phase was crucial in identifying gaps between theoretical plans and practical feasibility.
+    Building upon these sketches, we transitioned into a digital prototype using Blender (Figure 2), which allowed us to visualize the bridge in three dimensions. This digital prototype helped identify spatial misalignments and provided insight into how the layers stacked during load application. Having the ability to rotate and inspect the bridge from multiple angles clarified certain doubts about load paths and joint placements. This model also facilitated team discussions, allowing all members to visualize the same reference before actual construction began.
   </p>
 
   <figure style="text-align: center;">
-    <img src="blender_bridge.png" alt="Figure 2 - Blender 3D Model of Bridge" style="max-width: 100%; height: auto;" />
+    <img src="blender_prototype.png" alt="Figure 2 - Blender Prototype of Bridge Design" style="max-width: 100%; height: auto;" />
     <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
-      <strong>Figure 2:</strong> Blender model used to visualize 3D assembly, spacing, and layering of structural components.
+      <strong>Figure 2:</strong> Blender model of the bridge provided a 3D reference to clarify spatial design.
     </figcaption>
   </figure>
 
   <p>
-    Finally, we transitioned to the physical prototype (Figure 3). This step involved implementing our design using real materials, adhesives, and measurement tools. Although our plan was well-developed, the construction phase revealed small but critical buildability challenges such as precise cutting tolerance, drying times, and alignment stability. Without the prior two prototypes, these issues could have compromised our structure. By physically prototyping, we ensured our bridge matched the intent of our design brief and could withstand required loads.
+    Finally, we built the full-scale bridge using manila folders, glue, and reinforcement spikes. This physical prototyping stage (Figures 3–8) brought our conceptual and digital plans into reality. Each figure shows a different stage of the construction, from layering components to gluing and clamping the spans. The actual build allowed us to test tolerances, gain hands-on experience with material behavior, and refine our sequence of assembly. We realized the importance of precision and timing in gluing and how critical reinforcements were at load-bearing intersections. This CTMF proved invaluable in moving from theory to practice and closing the gap between idealized models and functional structures.
   </p>
 
-  <figure style="text-align: center;">
-    <img src="real_bridge.png" alt="Figure 3 - Final Built Bridge" style="max-width: 100%; height: auto;" />
-    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
-      <strong>Figure 3:</strong> Final constructed bridge, integrating learnings from both drawing and 3D modeling prototypes.
-    </figcaption>
-  </figure>
-
-  <p>
-    This iterative prototyping approach exemplified the value of the <strong>Represent</strong> phase of the engineering design cycle. Each prototype stage gave us insights that directly informed the next, culminating in a structure that not only satisfied our performance goals, but also aligned with practical constraints. The process emphasized the importance of visualization and iterative refinement, reinforcing how design representation drives buildability.
-  </p>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;">
+    <figure style="flex: 1 1 300px; text-align: center;">
+      <img src="construction1.png" alt="Figure 3 - Bridge Build Step 1" style="width: 100%; height: auto; border-radius: 0.5rem;" />
+      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 3: Initial layer assembly.</figcaption>
+    </figure>
+    <figure style="flex: 1 1 300px; text-align: center;">
+      <img src="construction2.png" alt="Figure 4 - Bridge Build Step 2" style="width: 100%; height: auto; border-radius: 0.5rem;" />
+      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 4: Mid-layer gluing process.</figcaption>
+    </figure>
+    <figure style="flex: 1 1 300px; text-align: center;">
+      <img src="construction3.png" alt="Figure 5 - Bridge Build Step 3" style="width: 100%; height: auto; border-radius: 0.5rem;" />
+      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 5: Adding diaphragm reinforcements.</figcaption>
+    </figure>
+    <figure style="flex: 1 1 300px; text-align: center;">
+      <img src="construction4.png" alt="Figure 6 - Bridge Build Step 4" style="width: 100%; height: auto; border-radius: 0.5rem;" />
+      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 6: Aligning the final top span.</figcaption>
+    </figure>
+    <figure style="flex: 1 1 300px; text-align: center;">
+      <img src="construction5.png" alt="Figure 7 - Bridge Build Step 5" style="width: 100%; height: auto; border-radius: 0.5rem;" />
+      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 7: Full bridge clamped and drying.</figcaption>
+    </figure>
+    <figure style="flex: 1 1 300px; text-align: center;">
+      <img src="construction6.png" alt="Figure 8 - Completed Bridge" style="width: 100%; height: auto; border-radius: 0.5rem;" />
+      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 8: Final constructed bridge ready for testing.</figcaption>
+    </figure>
+  </div>
 </div>
+
 
 <div class="section-container fade-section">
   <h2>Final Takeaways</h2>
