--- a/website.html
+++ b/website.html
@@ -508,7 +508,7 @@
   </p>
 
   <figure style="text-align: center;">
-    <img src="blender_prototype.png" alt="Figure 2 - Blender Prototype of Bridge Design" style="max-width: 100%; height: auto;" />
+    <img src="blender_prototype.webp" alt="Figure 2 - Blender Prototype of Bridge Design" style="max-width: 100%; height: auto;" />
     <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
       <strong>Figure 2:</strong> Blender model of the bridge provided a 3D reference to clarify spatial design.
     </figcaption>
@@ -520,28 +520,28 @@
 
   <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;">
     <figure style="flex: 1 1 300px; text-align: center;">
-      <img src="construction1.png" alt="Figure 3 - Bridge Build Step 1" style="width: 100%; height: auto; border-radius: 0.5rem;" />
-      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 3: Initial layer assembly.</figcaption>
+      <img src="construction1.jpg" alt="Figure 3 - Bridge Build Step 1" style="width: 100%; height: auto; border-radius: 0.5rem;" />
+      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 3: Step 1.</figcaption>
     </figure>
     <figure style="flex: 1 1 300px; text-align: center;">
-      <img src="construction2.png" alt="Figure 4 - Bridge Build Step 2" style="width: 100%; height: auto; border-radius: 0.5rem;" />
-      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 4: Mid-layer gluing process.</figcaption>
+      <img src="construction2.jpg" alt="Figure 4 - Bridge Build Step 2" style="width: 100%; height: auto; border-radius: 0.5rem;" />
+      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 4: Step 2.</figcaption>
     </figure>
     <figure style="flex: 1 1 300px; text-align: center;">
-      <img src="construction3.png" alt="Figure 5 - Bridge Build Step 3" style="width: 100%; height: auto; border-radius: 0.5rem;" />
-      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 5: Adding diaphragm reinforcements.</figcaption>
+      <img src="construction3.jpg" alt="Figure 5 - Bridge Build Step 3" style="width: 100%; height: auto; border-radius: 0.5rem;" />
+      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 5: Step 3.</figcaption>
     </figure>
     <figure style="flex: 1 1 300px; text-align: center;">
-      <img src="construction4.png" alt="Figure 6 - Bridge Build Step 4" style="width: 100%; height: auto; border-radius: 0.5rem;" />
-      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 6: Aligning the final top span.</figcaption>
+      <img src="construction4.jpg" alt="Figure 6 - Bridge Build Step 4" style="width: 100%; height: auto; border-radius: 0.5rem;" />
+      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 6: Step 4.</figcaption>
     </figure>
     <figure style="flex: 1 1 300px; text-align: center;">
-      <img src="construction5.png" alt="Figure 7 - Bridge Build Step 5" style="width: 100%; height: auto; border-radius: 0.5rem;" />
-      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 7: Full bridge clamped and drying.</figcaption>
+      <img src="construction5.jpg" alt="Figure 7 - Bridge Build Step 5" style="width: 100%; height: auto; border-radius: 0.5rem;" />
+      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 7: Step 5.</figcaption>
     </figure>
     <figure style="flex: 1 1 300px; text-align: center;">
-      <img src="construction6.png" alt="Figure 8 - Completed Bridge" style="width: 100%; height: auto; border-radius: 0.5rem;" />
-      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 8: Final constructed bridge ready for testing.</figcaption>
+      <img src="construction6.jpg" alt="Figure 8 - Completed Bridge" style="width: 100%; height: auto; border-radius: 0.5rem;" />
+      <figcaption style="margin-top: 0.5rem; font-size: 0.85rem; color: #555;">Figure 8: Step 6.</figcaption>
     </figure>
   </div>
 </div>
