--- a/website.html
+++ b/website.html
@@ -404,6 +404,10 @@
   <div id="civ102" class="tab-content">
   <div class="section-container fade-section">
     <h2>One Pager</h2>
+    <div class="image-row">
+      <img src="CIVPager1.png" alt="CIV Page 1" />
+      <img src="CIVPager2.png" alt="CIV Page 2" />
+    </div>
     <p>Brief overview of your Praxis I project’s vision and goals in a concise one-pager format.</p>
   </div>
   <div class="section-container fade-section">
