--- a/website.html
+++ b/website.html
@@ -403,7 +403,20 @@
 
   <div id="civ102" class="tab-content">
   <div class="section-container fade-section">
-    <h2>One Pager</h2>
+  <h2>CIV102 One-Pager Summary</h2>
+
+  <p>
+    “The KitKat Bridge” was designed to carry over 400 N of train load while optimizing strength-to-weight ratio, material efficiency, and structural performance. Our team focused on a strategic use of matboard materials and incorporated angled webs to improve stability under diagonal compression forces. By integrating a central underlayer beneath glue tabs, we increased the second moment of area (Ybar), leading to improved resistance against vertical bending. These design highlights reflected a direct response to the key opportunity: supporting significant loads within strict dimensional and material constraints.
+  </p>
+
+  <p>
+    The construction process was guided by iterative analysis and value-driven decision making. Emphasis was placed on using diaphragm reinforcements and buckling calculations to position glue tabs and spike reinforcements effectively. We predicted that our bridge would fail in compression rather than shear or glue, and our test data confirmed that the FOS (factor of safety) remained ≥ 2 across all major failure modes. Careful fold scoring, glue width optimization, and material-efficient layouts further reinforced our structural performance, without compromising sustainability.
+  </p>
+
+  <p>
+    Ultimately, the bridge reached a maximum load of 996 N before failure — more than double the required target. Our final design was not only structurally sound but also reflected strong teamwork, design intuition, and technical reasoning. By combining engineering principles with practical construction strategies, we produced a bridge that was both robust and efficient under load, demonstrating the successful outcome of our course-defined design challenge.
+  </p>
+
     <div class="image-row">
       <img src="CIVPager1.png" alt="CIV Page 1" />
       <img src="CIVPager2.png" alt="CIV Page 2" />
