--- a/website.html
+++ b/website.html
@@ -703,7 +703,7 @@
 }   
   else if (tabId === 'civ102') {
   body.style.backgroundImage = 'none';
-  body.style.backgroundColor = '#660000'; // 🌈 Your desired outer background color here
+  body.style.backgroundColor = '#c18a8a'; // 🌈 Your desired outer background color here
 } 
   else if (tabId === 'position') {
   lastPhase = '';
