--- a/website.html
+++ b/website.html
@@ -20,14 +20,16 @@
       overflow-x: hidden;
     }
     header {
-      background: linear-gradient(to right, #1e3a8a, #2563eb);
-      padding: 2rem;
-      text-align: center;
-      color: white;
-      z-index: 100;
-      position: relative;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-    }
+    background: rgba(30, 58, 138, 0.75);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    padding: 2.5rem 2rem;
+    border-radius: 0 0 1rem 1rem;
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    text-align: center;
+    box-shadow: 0 6px 16px rgba(0,0,0,0.3);
+  }
+
     header h1 {
       font-size: 2.5rem;
       margin-bottom: 0.5rem;
