--- a/website.html
+++ b/website.html
@@ -20,15 +20,23 @@
       overflow-x: hidden;
     }
     header {
-    background: rgba(30, 58, 138, 0.75);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    padding: 2.5rem 2rem;
-    border-radius: 0 0 1rem 1rem;
-    border: 1px solid rgba(255, 255, 255, 0.15);
-    text-align: center;
-    box-shadow: 0 6px 16px rgba(0,0,0,0.3);
-  }
+  background: linear-gradient(135deg, #1e3a8a, #2563eb, #60a5fa);
+  padding: 2.5rem 2rem;
+  text-align: center;
+  color: white;
+  z-index: 100;
+  position: relative;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.25);
+  background-size: 400% 400%;
+  animation: gradientShift 15s ease infinite;
+}
+
+@keyframes gradientShift {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
 
     header h1 {
       font-size: 2.5rem;
