--- a/website.html
+++ b/website.html
@@ -693,36 +693,42 @@
   <button id="backToTop" title="Back to Top">↑ Top</button>
   <script>
     function showTab(tabId, event) {
-    const contents = document.querySelectorAll('.tab-content');
-    const buttons = document.querySelectorAll('.tab-button');
-    const body = document.getElementById('mainBody');
-  
-    contents.forEach(content => content.classList.remove('active'));
-    buttons.forEach(btn => btn.classList.remove('active'));
-    document.getElementById(tabId).classList.add('active');
-    event.target.classList.add('active');
-  
-    if (tabId === 'praxis2') {
-  body.style.backgroundImage = 'none';
-  body.style.backgroundColor = '#375b43'; // 🌈 Your desired outer background color here
-} 
-  else if (tabId === 'praxis1') {
-  body.style.backgroundImage = 'none';
-  body.style.backgroundColor = '#666699'; // 🌈 Your desired outer background color here
-}   
-  else if (tabId === 'civ102') {
-  body.style.backgroundImage = 'none';
-  body.style.backgroundColor = '#c18a8a'; // 🌈 Your desired outer background color here
-} 
-  else if (tabId === 'position') {
-  lastPhase = '';
-  window.dispatchEvent(new Event('scroll'));
-  body.style.backgroundColor = ''; // let cutscene handle it
-} else {
-  body.style.backgroundImage = 'none';
-  body.style.backgroundColor = '#ffffff'; // default for other tabs
-}
+  const contents = document.querySelectorAll('.tab-content');
+  const buttons = document.querySelectorAll('.tab-button');
+  const body = document.getElementById('mainBody');
+  const header = document.querySelector('header');
+  const backToTopBtn = document.getElementById('backToTop');
+
+  contents.forEach(content => content.classList.remove('active'));
+  buttons.forEach(btn => btn.classList.remove('active'));
+  document.getElementById(tabId).classList.add('active');
+  event.target.classList.add('active');
+
+  if (tabId === 'praxis2') {
+    body.style.backgroundColor = '#375b43';
+    header.style.background = 'linear-gradient(135deg, #225c2e, #3d8b4a, #5aa472)';
+    backToTopBtn.style.backgroundColor = '#3d8b4a';
+  } else if (tabId === 'praxis1') {
+    body.style.backgroundColor = '#666699';
+    header.style.background = 'linear-gradient(135deg, #443c73, #666699, #a5a5d6)';
+    backToTopBtn.style.backgroundColor = '#443c73';
+  } else if (tabId === 'civ102') {
+    body.style.backgroundColor = '#c18a8a';
+    header.style.background = 'linear-gradient(135deg, #844646, #c18a8a, #e6c0c0)';
+    backToTopBtn.style.backgroundColor = '#844646';
+  } else if (tabId === 'position') {
+    lastPhase = '';
+    window.dispatchEvent(new Event('scroll'));
+    body.style.backgroundColor = '';
+    header.style.background = 'linear-gradient(135deg, #1e3a8a, #2563eb, #60a5fa)';
+    backToTopBtn.style.backgroundColor = '#2563eb';
+  } else {
+    body.style.backgroundColor = '#ffffff';
+    header.style.background = 'linear-gradient(135deg, #1e3a8a, #2563eb, #60a5fa)';
+    backToTopBtn.style.backgroundColor = '#2563eb';
   }
+}
+
 
 
     const cutsceneLabel = document.getElementById('cutsceneLabel');
