--- a/website.html
+++ b/website.html
@@ -719,9 +719,11 @@
   } else if (tabId === 'position') {
     lastPhase = '';
     window.dispatchEvent(new Event('scroll'));
-    body.style.backgroundColor = '';
+    body.style.backgroundImage = ''; // ⛔ Remove scroll-triggered background
     header.style.background = 'linear-gradient(135deg, #1e3a8a, #2563eb, #60a5fa)';
     backToTopBtn.style.backgroundColor = '#2563eb';
+  }
+
   } else {
     body.style.backgroundColor = '#ffffff';
     header.style.background = 'linear-gradient(135deg, #1e3a8a, #2563eb, #60a5fa)';
