--- a/website.html
+++ b/website.html
@@ -20,7 +20,7 @@
       overflow-x: hidden;
     }
     header {
-  background: linear-gradient(135deg, #1e3a8a, #2563eb, #60a5fa);
+  background: linear-gradient(135deg, #6b7280, #9ca3af, #d1d5db);
   padding: 2.5rem 2rem;
   text-align: center;
   color: white;
@@ -56,14 +56,16 @@
       position: relative;
     }
     .tab-button {
-      background-color: #e5e7eb;
-      border: none;
-      padding: 0.75rem 1.5rem;
-      border-radius: 0.5rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
+  background-color: #d1d5db; /* gray-300 */
+  color: black;
+  border: none;
+  padding: 0.75rem 1.5rem;
+  border-radius: 0.5rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
     .tab-button.active,
     .tab-button:hover {
       background-color: #2563eb;
@@ -704,34 +706,45 @@
   document.getElementById(tabId).classList.add('active');
   event.target.classList.add('active');
 
+  // Reset all buttons to default style
+  buttons.forEach(btn => {
+    btn.style.backgroundColor = '#d1d5db';
+    btn.style.color = 'black';
+  });
+
+  // Apply active button style based on tab
+  event.target.style.color = 'white';
   if (tabId === 'praxis2') {
     body.style.backgroundImage = 'none';
     body.style.backgroundColor = '#375b43';
     header.style.background = 'linear-gradient(135deg, #225c2e, #3d8b4a, #5aa472)';
     backToTopBtn.style.backgroundColor = '#3d8b4a';
+    event.target.style.backgroundColor = '#3d8b4a';
   } else if (tabId === 'praxis1') {
     body.style.backgroundImage = 'none';
     body.style.backgroundColor = '#666699';
     header.style.background = 'linear-gradient(135deg, #443c73, #666699, #a5a5d6)';
     backToTopBtn.style.backgroundColor = '#443c73';
+    event.target.style.backgroundColor = '#443c73';
   } else if (tabId === 'civ102') {
     body.style.backgroundImage = 'none';
     body.style.backgroundColor = '#c18a8a';
     header.style.background = 'linear-gradient(135deg, #844646, #c18a8a, #e6c0c0)';
     backToTopBtn.style.backgroundColor = '#844646';
+    event.target.style.backgroundColor = '#844646';
   } else if (tabId === 'position') {
     lastPhase = '';
     window.dispatchEvent(new Event('scroll'));
-    // background image will be set dynamically during scroll
     body.style.backgroundImage = '';
     header.style.background = 'linear-gradient(135deg, #1e3a8a, #2563eb, #60a5fa)';
     backToTopBtn.style.backgroundColor = '#2563eb';
+    event.target.style.backgroundColor = '#2563eb';
   } else {
-    // default style for any new tabs
     body.style.backgroundImage = 'none';
     body.style.backgroundColor = '#ffffff';
     header.style.background = 'linear-gradient(135deg, #1e3a8a, #2563eb, #60a5fa)';
     backToTopBtn.style.backgroundColor = '#2563eb';
+    event.target.style.backgroundColor = '#2563eb';
   }
 }
 
