--- a/website.html
+++ b/website.html
@@ -736,13 +736,14 @@
     lastPhase = '';
     window.dispatchEvent(new Event('scroll'));
     body.style.backgroundImage = '';
-    header.style.background = 'linear-gradient(135deg, #1e3a8a, #2563eb, #60a5fa)';
+    header.style.background = 'linear-gradient(135deg, #6b7280, #9ca3af, #d1d5db)';
+';
     backToTopBtn.style.backgroundColor = '#2563eb';
     event.target.style.backgroundColor = '#2563eb';
   } else {
     body.style.backgroundImage = 'none';
     body.style.backgroundColor = '#ffffff';
-    header.style.background = 'linear-gradient(135deg, #1e3a8a, #2563eb, #60a5fa)';
+    header.style.background = 'linear-gradient(135deg, #6b7280, #9ca3af, #d1d5db)';
     backToTopBtn.style.backgroundColor = '#2563eb';
     event.target.style.backgroundColor = '#2563eb';
   }
