--- a/website.html
+++ b/website.html
@@ -622,9 +622,38 @@
   </div>
 
   <div class="section-container fade-section">
-    <h2>CTMF 2</h2>
-    <p>Discuss how your understanding evolved and how iteration improved your approach.</p>
+  <h2>CTMF 2: Diverging with Biomimicry and Morph Chart</h2>
+
+  <p>
+    One of the most impactful diverging tools our team used during the design process was the combination of <strong>biomimicry</strong> and a <strong>morphological chart</strong>. These tools were key in helping us expand the design space and push beyond conventional solutions, ultimately giving rise to unique, viable concepts.
+  </p>
+
+  <p>
+    We started with a biomimicry brainstorming session where we analyzed natural systems that manage water in efficient or adaptive ways. For instance, we looked at how <strong>cacti</strong> retain water through waxy cuticles and shallow, expansive root systems, and how <strong>moss</strong> conserves moisture by covering the topsoil. These insights didn’t stay abstract — they directly inspired functions in our design. The cactus led to ideas for <em>moisture-preserving containers and smart probes</em>, while moss influenced thoughts around <em>passive moisture retention layers</em>.
+  </p>
+
+  <p>
+    We also took inspiration from biological structures like <strong>villi and cilia</strong>, which maximize surface area for absorption, and applied these to concept sketches for <em>hair-like moisture probes</em>. Even plant behaviors like <strong>stomata regulation</strong> and <strong>tree masting synchronization</strong> led us to brainstorm features like adaptive sensors and control comparisons based on moisture timing.
+  </p>
+
+  <p>
+    Parallel to biomimicry, we used a morphological chart to map different functions of our system — such as <em>sampling soil</em>, <em>maximizing sensor contrast</em>, <em>measuring moisture</em>, and <em>quantifying saturation</em> — to multiple technological approaches. These included <strong>color scanning</strong>, <strong>capacitive/resistive probes</strong>, <strong>ultrasonic sensors</strong>, and <strong>gravimetric weight systems</strong>. Rather than locking into a single method, this process allowed us to mix and match ideas, and recognize the strengths of each approach.
+  </p>
+
+  <p>
+    Together, biomimicry and the morph chart helped us explore over a dozen ideas that might not have emerged through traditional brainstorming. Importantly, this CTMF revealed that even partial ideas — like a concept inspired by “intraoral scanners” — could be refined or combined with others to generate practical, testable prototypes. Diverging in this way gave our team a creative and structured foundation from which to begin convergence.
+  </p>
+
+  <p>
+    <em>Effectiveness:</em> This CTMF was highly effective because it allowed our team to draw from both biological inspiration and technical function mapping. The result was a much richer pool of ideas that enhanced creativity, deepened our understanding of nature-based engineering, and positioned us for stronger concept selection in the next phase.
+  </p>
+
+  <div class="image-row">
+    <img src="biomimicry.png" alt="Biomimicry Brainstorm Sheet" />
+    <img src="morph.png" alt="Morphological Chart" />
   </div>
+</div>
+
 
   <div class="section-container fade-section">
   <h2>CTMF 3: Converging with Pugh Charts</h2>
