--- a/website.html
+++ b/website.html
@@ -68,9 +68,10 @@
 
     .tab-button.active,
     .tab-button:hover {
-      background-color: #2563eb;
-      color: white;
+      background-color: #9ca3af; /* darker gray on hover/active */
+      color: black;
     }
+
     .tab-content {
       line-height: 1.8;
       display: none;
