--- a/website.html
+++ b/website.html
@@ -650,9 +650,21 @@
   </p>
 
   <div class="image-row">
-    <img src="biomimicry.png" alt="Biomimicry Brainstorm Sheet" />
-    <img src="morph.png" alt="Morphological Chart" />
-  </div>
+  <figure style="flex: 1 1 300px; text-align: center;">
+    <img src="biomimicry.png" alt="Biomimicry Brainstorm Sheet" style="width: 100%; height: auto; border-radius: 1rem; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      <strong>Figure 1:</strong> Biomimicry Brainstorm Sheet inspired by cactus and moss water management.
+    </figcaption>
+  </figure>
+
+  <figure style="flex: 1 1 300px; text-align: center;">
+    <img src="morph.png" alt="Morphological Chart" style="width: 100%; height: auto; border-radius: 1rem; box-shadow: 0 4px 12px rgba(0,0,0,0.1);" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      <strong>Figure 2:</strong> Morphological Chart mapping functions to technological solutions.
+    </figcaption>
+  </figure>
+</div>
+
 </div>
 
 
