--- a/website.html
+++ b/website.html
@@ -779,14 +779,14 @@
     window.dispatchEvent(new Event('scroll'));
     body.style.backgroundImage = '';
     header.style.background = 'linear-gradient(135deg, #6b7280, #9ca3af, #d1d5db)';
-    backToTopBtn.style.backgroundColor = '#2563eb';
+    backToTopBtn.style.backgroundColor = '#9ca3af';
     event.target.style.backgroundColor = '#9ca3af'; // match the gray active color
 
   } else {
     body.style.backgroundImage = 'none';
     body.style.backgroundColor = '#ffffff';
     header.style.background = 'linear-gradient(135deg, #6b7280, #9ca3af, #d1d5db)';
-    backToTopBtn.style.backgroundColor = '#2563eb';
+    backToTopBtn.style.backgroundColor = '#9ca3af';
     event.target.style.backgroundColor = '#9ca3af'; // match the gray active color
 
   }
