--- a/website.html
+++ b/website.html
@@ -618,9 +618,40 @@
   </div>
 
   <div class="section-container fade-section">
-    <h2>CTMF 1</h2>
-    <p>Explain your first application of the CTMF model and how you began to navigate the design cycle.</p>
+  <h2>CTMF 1: Framing through Primary Research</h2>
+
+  <p>
+    Our team began the Praxis II design process by actively engaging with the <strong>Toronto Bonsai Society</strong> to conduct <strong>primary research</strong> and understand the real needs of the bonsai community. This early interaction provided invaluable framing insights, especially around the needs of <strong>beginner bonsai enthusiasts</strong>—a demographic that stakeholders identified as needing the most support in plant care and moisture monitoring.
+  </p>
+
+  <p>
+    Through our conversation with stakeholders, we learned that many new bonsai caretakers often struggle with overwatering or underwatering due to uncertainty and lack of intuitive feedback. As a result, we reframed our user group to focus specifically on <strong>novice users</strong>, shifting our design priorities to match their learning curve and usability needs. This reframing directly influenced our engineering requirements.
+  </p>
+
+  <p>
+    One key outcome of this framing shift was the addition of a brand-new requirement: our design must <strong>minimize the number of steps</strong> the user needs to take to assess soil moisture. The aim was to improve overall usability and encourage continued engagement with the system, especially for users who might feel intimidated by traditional tools.
+  </p>
+
+  <div style="text-align: center; margin: 2rem 0;">
+    <img src="requirement_steps.png" alt="New Requirement: Minimize Steps" style="max-width: 100%; height: auto; border-radius: 1rem; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      <strong>Figure 1:</strong> Requirement added based on community feedback: Minimize steps to improve usability for beginner users.
+    </figcaption>
   </div>
+
+  <div style="border: 3px solid orange; border-radius: 1rem; padding: 1.5rem; margin: 2rem 0; background-color: #fff8f0;">
+    <p style="font-size: 1.25rem; font-weight: 600; color: #444; text-align: center;">
+      “Beginners often use (and kill) Junipers, which require more water than some expect, but also don’t want to be soaked” - Josh, Head of Toronto Bonsai Society
+    </p>
+  </div>
+
+  <p>
+    This quote encapsulated our user-centered framing approach. By letting community voices drive the conversation, we were able to ground our technical goals in real-world insights. Rather than designing for the average user, we prioritized accessibility, simplicity, and beginner empowerment—reframing the problem not as one of moisture detection alone, but of user experience in plant care.
+  </p>
+
+  <p><em>Effectiveness:</em> This CTMF was highly effective because it redefined our target audience and expanded the problem space to include usability barriers. The primary research deepened our empathy for users, leading to better design decisions throughout the development cycle.</p>
+</div>
+
 
   <div class="section-container fade-section">
   <h2>CTMF 2: Diverging with Biomimicry and Morph Chart</h2>
