--- a/website.html
+++ b/website.html
@@ -743,6 +743,31 @@
   </p>
 </div>
 
+<div class="section-container fade-section">
+<h2>Final Takeaways</h2>
+
+<p>
+  Praxis II pushed me to rethink engineering design as not just a technical activity, but as a conversation between real users, nature-inspired creativity, and structured evaluation. What started as a simple idea — reading soil color to detect moisture — turned into a complex, iterative journey that challenged my understanding of usability, functionality, and empathy.
+</p>
+
+<p>
+  Through our <strong>primary research</strong> with the Toronto Bonsai Society, I learned the importance of **framing a problem with the user in mind**. We weren't designing for plants — we were designing for beginners. That small shift reframed our entire approach, leading to simpler output methods, clearer feedback, and design requirements that aligned with how users actually behave. It reminded me that engineering isn’t about showing off precision — it’s about making people's lives easier.
+</p>
+
+<p>
+  In the divergent phase, the combination of <strong>biomimicry and morphological charts</strong> was a breakthrough moment. These tools expanded our thinking far beyond typical sensors and sparked ideas from living systems — cacti, moss, and even villi — that would have never appeared in traditional brainstorming. It showed me that creativity in engineering can be both structured and wildly exploratory at the same time.
+</p>
+
+<p>
+  Finally, using <strong>Pugh charts</strong> to converge made our decision-making clear, traceable, and confident. Instead of arguing based on preference, we built consensus around what mattered: accuracy, simplicity, and corrosion resistance. The structured nature of this CTMF gave our team focus and clarity, helping us defend our final choice with evidence.
+</p>
+
+<p>
+  Overall, Praxis II taught me that the best designs emerge when framing, diverging, and converging are all handled with intention. Good engineering isn't about jumping to a cool solution — it's about <em>earning</em> that solution through empathy, exploration, and evaluation. I now see CTMFs not as a checklist, but as a toolkit for thinking better, designing smarter, and keeping people at the heart of every decision.
+</p>
+</div>
+
+
 </div>
 
 <div id="Resources" class="tab-content">
