--- a/website.html
+++ b/website.html
@@ -228,6 +228,7 @@
     <button class="tab-button" onclick="showTab('praxis1', event)">Praxis I</button>
     <button class="tab-button" onclick="showTab('civ102', event)">CIV102 Bridge</button>
     <button class="tab-button" onclick="showTab('praxis2', event)">Praxis II</button>
+    <button class="tab-button" onclick="showTab('resources', event)">Resources</button>
   </div>
 
   <div id="position" class="tab-content active" style="background: none; color: white; box-shadow: none;">
