--- a/website.html
+++ b/website.html
@@ -224,13 +224,38 @@
   </header>
 
   <div class="tabs">
+    <button class="tab-button" onclick="showTab('Introduction', event)">Introduction</button>
     <button class="tab-button active" onclick="showTab('position', event)">Original Position</button>
     <button class="tab-button" onclick="showTab('praxis1', event)">Praxis I</button>
     <button class="tab-button" onclick="showTab('civ102', event)">CIV102 Bridge</button>
     <button class="tab-button" onclick="showTab('praxis2', event)">Praxis II</button>
-    <button class="tab-button" onclick="showTab('resources', event)">Resources</button>
+    <button class="tab-button" onclick="showTab('Resources', event)">Resources</button>
+    <button class="tab-button" onclick="showTab('Conclusion', event)">Conclusion</button>
   </div>
 
+  <div id="Introduction" class="tab-content">
+<div class="section-container fade-section">
+  <h2>One Pager</h2>
+  <div class="image-row">
+    <img src="Praxis2Pager1.png" alt="Praxis 2 Page 1" />
+    <img src="Praxis2Pager2.png" alt="Praxis 2 Page 2" />
+  </div>
+</div>
+
+<div class="section-container fade-section">
+  <h2>CTMF 1</h2>
+  <p>Explain your first application of the CTMF model and how you began to navigate the design cycle.</p>
+</div>
+
+<div class="section-container fade-section">
+  <h2>CTMF 2</h2>
+  <p>Discuss how your understanding evolved and how iteration improved your approach.</p>
+</div>
+
+
+
+</div>
+  
   <div id="position" class="tab-content active" style="background: none; color: white; box-shadow: none;">
     <div class="podium-container">
       <img id="soccerPodium" class="podium" src="soccer-podium.png" alt="Soccer Podium">
@@ -767,6 +792,29 @@
   Overall, Praxis II taught me that the best designs emerge when framing, diverging, and converging are all handled with intention. Good engineering isn't about jumping to a cool solution — it's about <em>earning</em> that solution through empathy, exploration, and evaluation. I now see CTMFs not as a checklist, but as a toolkit for thinking better, designing smarter, and keeping people at the heart of every decision.
 </p>
 </div>
+
+
+</div>
+
+<div id="Conclusion" class="tab-content">
+<div class="section-container fade-section">
+  <h2>One Pager</h2>
+  <div class="image-row">
+    <img src="Praxis2Pager1.png" alt="Praxis 2 Page 1" />
+    <img src="Praxis2Pager2.png" alt="Praxis 2 Page 2" />
+  </div>
+</div>
+
+<div class="section-container fade-section">
+  <h2>CTMF 1</h2>
+  <p>Explain your first application of the CTMF model and how you began to navigate the design cycle.</p>
+</div>
+
+<div class="section-container fade-section">
+  <h2>CTMF 2</h2>
+  <p>Discuss how your understanding evolved and how iteration improved your approach.</p>
+</div>
+
 
 
 </div>
