--- a/website.html
+++ b/website.html
@@ -233,28 +233,11 @@
     <button class="tab-button" onclick="showTab('Conclusion', event)">Conclusion</button>
   </div>
 
-  <div id="Introduction" class="tab-content">
-<div class="section-container fade-section">
-  <h2>One Pager</h2>
-  <div class="image-row">
-    <img src="Praxis2Pager1.png" alt="Praxis 2 Page 1" />
-    <img src="Praxis2Pager2.png" alt="Praxis 2 Page 2" />
+  <div class="section-container fade-section"> 
+    <h2>Introduction</h2> 
+    <p> Engineering design is often thought of as a strictly technical process — a matter of solving problems and building solutions. When I first entered the program, I saw it the same way. My original position on engineering design was rooted in logic, precision, and execution: identify a problem, build something to fix it, and make sure it works. It was a linear approach — straightforward and outcome-focused — shaped by my prior experiences in robotics, programming, and structured problem solving. </p> <p> Over the course of this term, that perspective has fundamentally evolved. Through three cornerstone projects — <strong>Praxis I</strong>, <strong>CIV102</strong>, and <strong>Praxis II</strong> — I was introduced to a more layered, reflective, and human-centered understanding of engineering design. Each course taught me to see beyond the "what" and into the "why" and "how" of design. I learned to frame problems with empathy, diverge creatively through structured ideation, and converge thoughtfully using evidence-based decision-making tools. These experiences helped me recognize that good engineering isn't just about functionality — it's about values, context, and impact. This portfolio captures that journey and the ways in which my design thinking has matured across each of these domains. 
+    </p> 
   </div>
-</div>
-
-<div class="section-container fade-section">
-  <h2>CTMF 1</h2>
-  <p>Explain your first application of the CTMF model and how you began to navigate the design cycle.</p>
-</div>
-
-<div class="section-container fade-section">
-  <h2>CTMF 2</h2>
-  <p>Discuss how your understanding evolved and how iteration improved your approach.</p>
-</div>
-
-
-
-</div>
   
   <div id="position" class="tab-content active" style="background: none; color: white; box-shadow: none;">
     <div class="podium-container">
