--- a/website.html
+++ b/website.html
@@ -233,12 +233,6 @@
     <button class="tab-button" onclick="showTab('Conclusion', event)">Conclusion</button>
   </div>
 
-  <div class="section-container fade-section"> 
-    <h2>Introduction</h2> 
-    <p> Engineering design is often thought of as a strictly technical process — a matter of solving problems and building solutions. When I first entered the program, I saw it the same way. My original position on engineering design was rooted in logic, precision, and execution: identify a problem, build something to fix it, and make sure it works. It was a linear approach — straightforward and outcome-focused — shaped by my prior experiences in robotics, programming, and structured problem solving. </p> <p> Over the course of this term, that perspective has fundamentally evolved. Through three cornerstone projects — <strong>Praxis I</strong>, <strong>CIV102</strong>, and <strong>Praxis II</strong> — I was introduced to a more layered, reflective, and human-centered understanding of engineering design. Each course taught me to see beyond the "what" and into the "why" and "how" of design. I learned to frame problems with empathy, diverge creatively through structured ideation, and converge thoughtfully using evidence-based decision-making tools. These experiences helped me recognize that good engineering isn't just about functionality — it's about values, context, and impact. This portfolio captures that journey and the ways in which my design thinking has matured across each of these domains. 
-    </p> 
-  </div>
-  
   <div id="position" class="tab-content active" style="background: none; color: white; box-shadow: none;">
     <div class="podium-container">
       <img id="soccerPodium" class="podium" src="soccer-podium.png" alt="Soccer Podium">
@@ -279,6 +273,19 @@
       <img src="conc2.png" alt="Conclusion 2" />
     </div>
   </div>
+
+  <div id="Introduction" class="tab-content">
+  <div class="section-container fade-section"> 
+    <h2>Introduction</h2> 
+    <p>
+      Engineering design is often thought of as a strictly technical process — a matter of solving problems and building solutions. When I first entered the program, I saw it the same way. My original position on engineering design was rooted in logic, precision, and execution: identify a problem, build something to fix it, and make sure it works. It was a linear approach — straightforward and outcome-focused — shaped by my prior experiences in robotics, programming, and structured problem solving.
+    </p> 
+    <p>
+      Over the course of this term, that perspective has fundamentally evolved. Through three cornerstone projects — <strong>Praxis I</strong>, <strong>CIV102</strong>, and <strong>Praxis II</strong> — I was introduced to a more layered, reflective, and human-centered understanding of engineering design. Each course taught me to see beyond the "what" and into the "why" and "how" of design. I learned to frame problems with empathy, diverge creatively through structured ideation, and converge thoughtfully using evidence-based decision-making tools. These experiences helped me recognize that good engineering isn't just about functionality — it's about values, context, and impact. This portfolio captures that journey and the ways in which my design thinking has matured across each of these domains.
+    </p>
+  </div>
+ </div>
+
 
   <div id="praxis1" class="tab-content">
   <div class="section-container fade-section">
